kubernete/myapp-from-myregistry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-demo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-demo
  template:
    metadata:
      labels:
        app: springboot-demo
    spec:
      containers:
        - name: springboot-demo
          image: localhost:5000/springboot-demo:latest  # 替换为你的镜像名称和标签
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: springboot-demo-service
spec:
  ports:
    - name: port-name
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: springboot-demo
  type: LoadBalancer
