kubernete/nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: dev
spec:
  selector:
    matchLabels:
      env: test
  template:
    metadata:
      labels:
        env: test
    spec:
      containers:
        - name: nginx-container
          image: nginx:1.17.1
          ports:
            - containerPort: 80
              name: nginx-port
              protocol: TCP
  replicas: 3
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: dev
spec:
  selector:
    env: test
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
